--- a/app/index.jade
+++ b/app/index.jade
@@ -16,7 +16,7 @@ head
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	title SAQ - Coveo Challenge
 	meta(name="description", content="")
-	meta(name="viewport", content="width=device-width")
+	meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
 	// Place favicon.ico and apple-touch-icon.png in the root directory
 	// build:css styles/vendor.css
 	// bower:css
@@ -27,6 +27,11 @@ head
 	// build:css(.tmp) styles/main.css
 	link(rel="stylesheet", href="styles/main.css")
 	// endbuild
+
+	//- GOOGLE FONTS
+	link(href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css')
+	link(rel='stylesheet', href='bower_components/font-awesome/css/font-awesome.css')
+
 body(ng-app="coveoFrontendChallengeApp")
 	<!--[if lt IE 7]>
 	p.browsehappy
@@ -39,7 +44,7 @@ body(ng-app="coveoFrontendChallengeApp")
 
 	// Add your site or application content here
 
-	.container(ng-view)
+	ng-view
 
 
 	// Google Analytics: change UA-XXXXX-X to be your site's ID
