--- a/app/index.jade
+++ b/app/index.jade
@@ -83,4 +83,5 @@ body(ng-app="coveoFrontendChallengeApp")
 	script(src="scripts/app.js")
 	script(src="scripts/controllers/main.js")
 	script(src="scripts/services/api.js")
+	script(src="scripts/directives/card.js")
 	// endbuild
