--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -19,6 +19,13 @@ body
   text-align center
   top 40%
 
+.center-loading
+  top 40%
+  text-align center
+  width 100%
+  z-index 2
+  position absolute
+
 .og-grid li > a
 .og-grid li > a img
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.5);
