--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -90,7 +90,7 @@
 							span.glyphicon.glyphicon-search
 
 .section
-	i#loader.fa.fa-spin.fa-refresh.fa-5x
+	loading.center-loading
 	.container
 		.row
-			elastic-grid(items='elastic', filter='popup', timeout=1000)#wineList
+			elastic-grid(items='elastic', filter='popup', timeout=1000)
