--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -1,14 +1,9 @@
 @import 'navbar'
 @import 'responsive'
 @import 'search'
+@import 'grid'
 
 @import url(https://fonts.googleapis.com/css?family='Open+Sans|Raleway');
-
-.padding-t
-  padding-top 20px
-
-.img-thumbnail
-  max-width 50%
 
 body
   font-family 'Open Sans', sans-serif
@@ -20,39 +15,5 @@ body
   z-index 2
   position absolute
 
-.og-grid li > a
-.og-grid li > a img
-  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.5);
-  box-shadow 3px 3px 7px rgba(0, 0, 0, 0.5)
-  border-radius 10px
-  border: 1px;
-  outline: 1px;
-  display: block;
-  position: relative;
-
-.og-grid
-  li
-    a
-      figure
-        span
-          margin-top 50%
-
-.og-expander
-  p
-    font-size 16px
-    text-align justify
-    font-family 'Raleway', sans-serif
-    .fa-globe
-      color #31708f
-      background #d9edf7
-    .fa-money
-      color #3c763d
-      background #dff0d8
-
-.og-details
-  h3
-    font-family 'Open Sans', sans-serif
-    font-weight 600
-
-.elastislide-wrapper
-  visibility hidden
+.margin-left
+  margin-left 15%
