--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -14,6 +14,10 @@ body
   width 100%
   z-index 2
   position absolute
+  margin-left -5%
 
 .margin-left
   margin-left 15%
+
+.padding-top
+  padding-top 2%
