animated result list

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -21,3 +21,9 @@ body
 
 .padding-top
   padding-top 2%
+
+#list
+  -webkit-animation-delay 0.75s
+  animation-delay 0.75s
+  -webkit-animation-duration 1.5s
+  animation-duration 1.5s
