--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -89,4 +89,4 @@
 						button.btn.btn-default(type='button')
 							span.glyphicon.glyphicon-search
 		.row
-			elastic-grid.padding-top(items='elastic', filter='popup', timeout=1000)
+			elastic-grid.padding-top(items='gridItems', filter='popup', timeout=1000)#list
