api has now simple + advanced queries

--- a/app/styles/colors.styl
+++ b/app/styles/colors.styl
@@ -6,3 +6,12 @@ $grid-success-bg = #dff0d8
 
 $white = #ffffff
 $black = #000000
+
+
+$light-grey = #2e353d
+$dark-grey = #23282e
+$lighter-grey = #4f5b69
+$darker-grey = #181c20
+$blacker-grey = #020203
+$yellow = #d19b3d
+$light-white = #e1ffff
