--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -3,7 +3,7 @@
 @import 'search'
 @import 'grid'
 
-@import url(https://fonts.googleapis.com/css?family='Open+Sans|Raleway');
+@import url(https://fonts.googleapis.com/css?family='Open+Sans|Raleway')
 
 body
   font-family 'Open Sans', sans-serif
