--- a/app/styles/navbar.styl
+++ b/app/styles/navbar.styl
@@ -1,10 +1,4 @@
-$light-grey = #2e353d
-$dark-grey = #23282e
-$lighter-grey = #4f5b69
-$darker-grey = #181c20
-$blacker-grey = #020203
-$yellow = #d19b3d
-$light-white = #e1ffff
+@import 'colors'
 
 .nav-side-menu
   overflow auto
