beginning search queries

--- a/app/styles/colors.styl
+++ b/app/styles/colors.styl
@@ -15,3 +15,9 @@ $darker-grey = #181c20
 $blacker-grey = #020203
 $yellow = #d19b3d
 $light-white = #e1ffff
+
+
+$main-section-bg = #656F7A
+$grid-li-a = #1A232D
+$grid-li-current-bg = #0F2921
+$grid-li-a-inactive-bg = #A5E7E7
