--- a/app/styles/grid.styl
+++ b/app/styles/grid.styl
@@ -1,27 +1,54 @@
 @import 'colors'
 
+.grid-bg
+  background-color $main-section-bg
+
+.wagwep-container
+  ul#portfolio-filter
+    a
+      background-color $grid-li-a-inactive-bg
+      color $grid-li-a
+      -webkit-box-shadow 8px 8px 12px rgba(0, 0, 0, 0.5)
+      -moz-box-shadow: 8px 8px 12px rgba(0,0,0,0.5)
+      box-shadow 8px 8px 12px rgba(0, 0, 0, 0.5)
+    li
+      &.current
+        a
+          background $grid-li-current-bg
+          color #fff
+
 .og-grid li > a
 .og-grid li > a img
-  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.5);
-  box-shadow 3px 3px 7px rgba(0, 0, 0, 0.5)
+  -webkit-box-shadow 8px 8px 12px rgba(0, 0, 0, 0.5)
+  -moz-box-shadow: 8px 8px 12px rgba(0,0,0,0.5)
+  box-shadow 8px 8px 12px rgba(0, 0, 0, 0.5)
   border-radius 10px
-  border: 1px;
-  outline: 1px;
-  display: block;
-  position: relative;
+  border 1px
+  outline none
+  display block
+  position relative
+
+.og-details a.first
+  font-size 16px
 
 .og-grid
   li
     a
       figure
         span
+          font-size 27px
+          font-weight 700
           margin-top 50%
 
 .og-expander
   p
-    font-size 16px
+    font-size 19px
+    color $white
     text-align justify
     font-family 'Raleway', sans-serif
+    .fa
+      padding 5px
+      margin 1.5px
     .fa-globe
       color $grid-info
       background $grid-info-bg
@@ -31,7 +58,7 @@
 
 .og-details
   h3
-    font-family 'Open Sans', sans-serif
+    font-family 'Raleway', sans-serif
     font-weight 600
 
 .elastislide-wrapper
