--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -8,12 +8,25 @@
 body
   font-family 'Open Sans', sans-serif
 
+.justify
+  text-align justify
+
+.center
+  text-align center
+
+.absolute
+  position absolute
+
+.fixed
+  position fixed
+
+html
+  background $main-section-bg
+
 .center-loading
   top 50%
-  text-align center
   width 100%
   z-index 2
-  position absolute
   margin-left -5%
 
 .margin-left
@@ -23,7 +36,7 @@ body
   padding-top 2%
 
 #list
-  -webkit-animation-delay 0.75s
-  animation-delay 0.75s
+  -webkit-animation-delay 0.125s
+  animation-delay 0.125s
   -webkit-animation-duration 1.5s
   animation-duration 1.5s
