--- a/app/styles/navbar.styl
+++ b/app/styles/navbar.styl
@@ -21,7 +21,7 @@
     display none
   li
     padding-left 0px
-    border-left 3px solid $light-grey
+    border-left 3px solid $main-section-bg
     border-bottom 1px solid $dark-grey
     a
       text-decoration none
@@ -32,7 +32,7 @@
         padding-right 20px
     &:hover
       border-left 3px solid $yellow
-      background-color $lighter-grey
+      background-color $main-section-bg
       -webkit-transition all 1s ease
       -moz-transition all 1s ease
       -o-transition all 1s ease
