search with rootscope

--- a/app/index.jade
+++ b/app/index.jade
@@ -69,7 +69,7 @@ body(ng-app="coveoFrontendChallengeApp")
 	script(src='bower_components/jquery/dist/jquery.js')
 	script(src='bower_components/es5-shim/es5-shim.js')
 	script(src='bower_components/angular/angular.js')
-	script(src='bower_components/json3/lib/json3.min.js')
+	script(src='bower_components/json3/lib/json3.js')
 	script(src='bower_components/bootstrap/dist/js/bootstrap.js')
 	script(src='bower_components/angular-resource/angular-resource.js')
 	script(src='bower_components/angular-cookies/angular-cookies.js')
@@ -85,6 +85,7 @@ body(ng-app="coveoFrontendChallengeApp")
 	script(src='bower_components/jquery-elastic-grid/js/jquery.hoverdir.js')
 	script(src='bower_components/jquery-elastic-grid/js/elastic_grid.encode.js')
 	script(src='bower_components/angular-elastic-grid/dist/angular-elastic-grid.js')
+	script(src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
 	// endbower
 	// endbuild
 
@@ -92,5 +93,5 @@ body(ng-app="coveoFrontendChallengeApp")
 	script(src="scripts/app.js")
 	script(src="scripts/controllers/main.js")
 	script(src="scripts/services/api.js")
-script(src="scripts/directives/loading.js")
+	script(src="scripts/directives/loading.js")
 	// endbuild
