simple search queries working

--- a/app/index.jade
+++ b/app/index.jade
@@ -94,4 +94,5 @@ body(ng-app="coveoFrontendChallengeApp")
 	script(src="scripts/controllers/main.js")
 	script(src="scripts/services/api.js")
 	script(src="scripts/directives/loading.js")
+	script(src='scripts/custom.js')
 	// endbuild
