--- a/app/styles/colors.styl
+++ b/app/styles/colors.styl
@@ -4,6 +4,13 @@ $grid-info-bg = #d9edf7
 $grid-success = #3c763d
 $grid-success-bg = #dff0d8
 
+$grid-danger = #a94442
+$grid-danger-bg = #f2dede
+
+$grid-warning = #8a6d3b
+$grid-warning-bg = #fcf8e3
+
+
 $white = #ffffff
 $black = #000000
 
@@ -19,5 +26,5 @@ $light-white = #e1ffff
 
 $main-section-bg = #656F7A
 $grid-li-a = #1A232D
-$grid-li-current-bg = #0F2921
-$grid-li-a-inactive-bg = #A5E7E7
+$grid-li-current-bg = #167156
+$grid-li-a-inactive-bg = #008E63
