--- a/app/styles/grid.styl
+++ b/app/styles/grid.styl
@@ -47,14 +47,27 @@
     text-align justify
     font-family 'Raleway', sans-serif
     .fa
+      border-radius 100px
       padding 5px
       margin 1.5px
     .fa-globe
       color $grid-info
       background $grid-info-bg
+      padding-left 8px
+      padding-right 8px
     .fa-money
       color $grid-success
       background $grid-success-bg
+    .fa-map-marker
+      color $grid-danger
+      background $grid-danger-bg
+      padding-left 11.5px
+      padding-right 11.5px
+    .fa-user
+      color $grid-warning
+      background $grid-warning-bg
+      padding-left 8.5px
+      padding-right 8.5px
 
 .og-details
   h3
