advanced search working... need to fix search inputs for advanced queries

--- a/app/styles/grid.styl
+++ b/app/styles/grid.styl
@@ -15,7 +15,7 @@
       &.current
         a
           background $grid-li-current-bg
-          color #fff
+          color $white
 
 .og-grid li > a
 .og-grid li > a img
@@ -47,7 +47,7 @@
     text-align justify
     font-family 'Raleway', sans-serif
     .fa
-      border-radius 100px
+      border-radius 50%
       padding 5px
       margin 1.5px
     .fa-globe
