--- a/app/styles/navbar.styl
+++ b/app/styles/navbar.styl
@@ -2,9 +2,9 @@
 
 .nav-side-menu
   overflow auto
-  font-family verdana
-  font-size 12px
-  font-weight 200
+  font-family Raleway, sans-serif
+  font-size 14px
+  font-weight 400
   background-color $light-grey
   position fixed
   top 0px
