--- a/app/styles/responsive.styl
+++ b/app/styles/responsive.styl
@@ -31,3 +31,10 @@
         display block
 
 // SOMETHING ELSE
+@media (max-width: 480px)
+  .margin-left
+    margin-left 0
+    margin-top -10px
+    
+  .padding-top
+    padding-top 20px
