--- a/app/styles/navbar.styl
+++ b/app/styles/navbar.styl
@@ -25,7 +25,7 @@
     border-bottom 1px solid $dark-grey
     a
       text-decoration none
-      color $light-white
+      color $grid-li-a
       i
         padding-left 10px
         width 20px
