--- a/app/styles/grid.styl
+++ b/app/styles/grid.styl
@@ -42,10 +42,10 @@
 
 .og-expander
   p
-    font-size 19px
+    font-size 16px
     color $white
     text-align justify
-    font-family 'Raleway', sans-serif
+    font-family Raleway
     .fa
       border-radius 50%
       padding 5px
@@ -71,7 +71,7 @@
 
 .og-details
   h3
-    font-family 'Raleway', sans-serif
+    font-family Raleway, sans-serif
     font-weight 600
 
 .elastislide-wrapper
