moved checkbox to the right

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -19,7 +19,7 @@ body
 
 .fixed
   position fixed
-  
+
 html
   background $main-section-bg
 
@@ -29,6 +29,8 @@ html
   z-index 2
   margin-left -5%
 
+.margin-checkbox
+  margin-left 3%
 .margin-left
   margin-left 15%
 
